// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDeep() When target is valid and not type checked When creating an object with already existing info should apply Array info to "list" 1`] = `
Object {
  "checker": Object {
    "arguments": [Function],
    "getProperty": [Function],
    "init": [Function],
    "mergeConfigs": [Function],
    "returnValue": [Function],
    "setProperty": [Function],
  },
  "children": Object {
    "@3": Object {
      "checker": Object {
        "arguments": [Function],
        "getProperty": [Function],
        "init": [Function],
        "mergeConfigs": [Function],
        "returnValue": [Function],
        "setProperty": [Function],
      },
      "children": Object {
        "@0": Object {
          "checker": Object {
            "arguments": [Function],
            "getProperty": [Function],
            "init": [Function],
            "mergeConfigs": [Function],
            "returnValue": [Function],
            "setProperty": [Function],
          },
          "children": Object {},
          "config": Object {
            "type": "type-checker-object",
          },
          "deep": true,
          "names": Array [
            "list",
            "3",
            "0",
          ],
        },
      },
      "config": Object {
        "type": "type-checker-object",
      },
      "deep": true,
      "names": Array [
        "list",
        "3",
      ],
    },
  },
  "config": Object {
    "type": "type-checker-object",
  },
  "deep": true,
  "names": Array [
    "list",
  ],
}
`;

exports[`createDeep() When target is valid and not type checked When creating an object with already existing info should apply Function ino to "method" 1`] = `
Object {
  "checker": Object {
    "arguments": [Function],
    "getProperty": [Function],
    "init": [Function],
    "mergeConfigs": [Function],
    "returnValue": [Function],
    "setProperty": [Function],
  },
  "children": Object {
    "@3": Object {
      "checker": Object {
        "arguments": [Function],
        "getProperty": [Function],
        "init": [Function],
        "mergeConfigs": [Function],
        "returnValue": [Function],
        "setProperty": [Function],
      },
      "children": Object {
        "@0": Object {
          "checker": Object {
            "arguments": [Function],
            "getProperty": [Function],
            "init": [Function],
            "mergeConfigs": [Function],
            "returnValue": [Function],
            "setProperty": [Function],
          },
          "children": Object {},
          "config": Object {
            "type": "type-checker-object",
          },
          "deep": true,
          "names": Array [
            "method",
            "3",
            "0",
          ],
        },
      },
      "config": Object {
        "type": "type-checker-object",
      },
      "deep": true,
      "names": Array [
        "method",
        "3",
      ],
    },
  },
  "config": Object {
    "type": "type-checker-function",
  },
  "deep": true,
  "names": Array [
    "method",
  ],
}
`;

exports[`createDeep() When target is valid and not type checked should contain type checked arrays 1`] = `
Object {
  "checker": Object {
    "arguments": [Function],
    "getProperty": [Function],
    "init": [Function],
    "mergeConfigs": [Function],
    "returnValue": [Function],
    "setProperty": [Function],
  },
  "children": Object {
    "@3": Object {
      "checker": Object {
        "arguments": [Function],
        "getProperty": [Function],
        "init": [Function],
        "mergeConfigs": [Function],
        "returnValue": [Function],
        "setProperty": [Function],
      },
      "children": Object {
        "@0": Object {
          "checker": Object {
            "arguments": [Function],
            "getProperty": [Function],
            "init": [Function],
            "mergeConfigs": [Function],
            "returnValue": [Function],
            "setProperty": [Function],
          },
          "children": Object {},
          "config": Object {
            "type": "type-checker-object",
          },
          "deep": true,
          "names": Array [
            "list",
            "3",
            "0",
          ],
        },
      },
      "config": Object {
        "type": "type-checker-object",
      },
      "deep": true,
      "names": Array [
        "list",
        "3",
      ],
    },
  },
  "config": Object {
    "type": "type-checker-object",
  },
  "deep": true,
  "names": Array [
    "list",
  ],
}
`;

exports[`createDeep() When target is valid and not type checked should touch every descendant to generate full types map 1`] = `
Object {
  "booleanValue": true,
  "child": MyClass {
    "booleanValue": 0,
    "numbers": Array [
      0,
      2,
      3,
      4,
    ],
    "stringValue": "my string",
    Symbol(type-checkers::info): Object {
      "checker": Object {
        "arguments": [Function],
        "getProperty": [Function],
        "init": [Function],
        "mergeConfigs": [Function],
        "returnValue": [Function],
        "setProperty": [Function],
      },
      "children": Object {
        "@constructor": Object {
          "checker": Object {
            "arguments": [Function],
            "getProperty": [Function],
            "init": [Function],
            "mergeConfigs": [Function],
            "returnValue": [Function],
            "setProperty": [Function],
          },
          "children": Object {},
          "config": Object {
            "type": "type-checker-function",
          },
          "deep": true,
          "names": Array [
            "child",
            "constructor",
          ],
        },
        "@numbers": Object {
          "checker": Object {
            "arguments": [Function],
            "getProperty": [Function],
            "init": [Function],
            "mergeConfigs": [Function],
            "returnValue": [Function],
            "setProperty": [Function],
          },
          "children": Object {
            "@constructor": Object {
              "checker": Object {
                "arguments": [Function],
                "getProperty": [Function],
                "init": [Function],
                "mergeConfigs": [Function],
                "returnValue": [Function],
                "setProperty": [Function],
              },
              "children": Object {},
              "config": Object {
                "type": "type-checker-function",
              },
              "deep": true,
              "names": Array [
                "child",
                "numbers",
                "constructor",
              ],
            },
          },
          "config": Object {
            "type": "type-checker-object",
          },
          "deep": true,
          "names": Array [
            "child",
            "numbers",
          ],
        },
      },
      "config": Object {
        "type": "type-checker-object",
      },
      "deep": true,
      "names": Array [
        "child",
      ],
    },
  },
  "list": Array [
    0,
    "2",
    true,
    Array [
      Object {
        "type": "my objects",
        Symbol(type-checkers::info): Object {
          "checker": Object {
            "arguments": [Function],
            "getProperty": [Function],
            "init": [Function],
            "mergeConfigs": [Function],
            "returnValue": [Function],
            "setProperty": [Function],
          },
          "children": Object {
            "@constructor": Object {
              "checker": Object {
                "arguments": [Function],
                "getProperty": [Function],
                "init": [Function],
                "mergeConfigs": [Function],
                "returnValue": [Function],
                "setProperty": [Function],
              },
              "children": Object {},
              "config": Object {
                "type": "type-checker-function",
              },
              "deep": true,
              "names": Array [
                "list",
                "3",
                "0",
                "constructor",
              ],
            },
          },
          "config": Object {
            "type": "type-checker-object",
          },
          "deep": true,
          "names": Array [
            "list",
            "3",
            "0",
          ],
        },
      },
    ],
  ],
  "method": [Function],
  "stringValue": "my string",
  Symbol(type-checkers::info): Object {
    "checker": Object {
      "arguments": [Function],
      "getProperty": [Function],
      "init": [Function],
      "mergeConfigs": [Function],
      "returnValue": [Function],
      "setProperty": [Function],
    },
    "children": Object {
      "@child": Object {
        "checker": Object {
          "arguments": [Function],
          "getProperty": [Function],
          "init": [Function],
          "mergeConfigs": [Function],
          "returnValue": [Function],
          "setProperty": [Function],
        },
        "children": Object {
          "@constructor": Object {
            "checker": Object {
              "arguments": [Function],
              "getProperty": [Function],
              "init": [Function],
              "mergeConfigs": [Function],
              "returnValue": [Function],
              "setProperty": [Function],
            },
            "children": Object {},
            "config": Object {
              "type": "type-checker-function",
            },
            "deep": true,
            "names": Array [
              "child",
              "constructor",
            ],
          },
          "@numbers": Object {
            "checker": Object {
              "arguments": [Function],
              "getProperty": [Function],
              "init": [Function],
              "mergeConfigs": [Function],
              "returnValue": [Function],
              "setProperty": [Function],
            },
            "children": Object {
              "@constructor": Object {
                "checker": Object {
                  "arguments": [Function],
                  "getProperty": [Function],
                  "init": [Function],
                  "mergeConfigs": [Function],
                  "returnValue": [Function],
                  "setProperty": [Function],
                },
                "children": Object {},
                "config": Object {
                  "type": "type-checker-function",
                },
                "deep": true,
                "names": Array [
                  "child",
                  "numbers",
                  "constructor",
                ],
              },
            },
            "config": Object {
              "type": "type-checker-object",
            },
            "deep": true,
            "names": Array [
              "child",
              "numbers",
            ],
          },
        },
        "config": Object {
          "type": "type-checker-object",
        },
        "deep": true,
        "names": Array [
          "child",
        ],
      },
      "@constructor": Object {
        "checker": Object {
          "arguments": [Function],
          "getProperty": [Function],
          "init": [Function],
          "mergeConfigs": [Function],
          "returnValue": [Function],
          "setProperty": [Function],
        },
        "children": Object {},
        "config": Object {
          "type": "type-checker-function",
        },
        "deep": true,
        "names": Array [
          "constructor",
        ],
      },
      "@list": Object {
        "checker": Object {
          "arguments": [Function],
          "getProperty": [Function],
          "init": [Function],
          "mergeConfigs": [Function],
          "returnValue": [Function],
          "setProperty": [Function],
        },
        "children": Object {
          "@3": Object {
            "checker": Object {
              "arguments": [Function],
              "getProperty": [Function],
              "init": [Function],
              "mergeConfigs": [Function],
              "returnValue": [Function],
              "setProperty": [Function],
            },
            "children": Object {
              "@0": Object {
                "checker": Object {
                  "arguments": [Function],
                  "getProperty": [Function],
                  "init": [Function],
                  "mergeConfigs": [Function],
                  "returnValue": [Function],
                  "setProperty": [Function],
                },
                "children": Object {
                  "@constructor": Object {
                    "checker": Object {
                      "arguments": [Function],
                      "getProperty": [Function],
                      "init": [Function],
                      "mergeConfigs": [Function],
                      "returnValue": [Function],
                      "setProperty": [Function],
                    },
                    "children": Object {},
                    "config": Object {
                      "type": "type-checker-function",
                    },
                    "deep": true,
                    "names": Array [
                      "list",
                      "3",
                      "0",
                      "constructor",
                    ],
                  },
                },
                "config": Object {
                  "type": "type-checker-object",
                },
                "deep": true,
                "names": Array [
                  "list",
                  "3",
                  "0",
                ],
              },
              "@constructor": Object {
                "checker": Object {
                  "arguments": [Function],
                  "getProperty": [Function],
                  "init": [Function],
                  "mergeConfigs": [Function],
                  "returnValue": [Function],
                  "setProperty": [Function],
                },
                "children": Object {},
                "config": Object {
                  "type": "type-checker-function",
                },
                "deep": true,
                "names": Array [
                  "list",
                  "3",
                  "constructor",
                ],
              },
            },
            "config": Object {
              "type": "type-checker-object",
            },
            "deep": true,
            "names": Array [
              "list",
              "3",
            ],
          },
          "@constructor": Object {
            "checker": Object {
              "arguments": [Function],
              "getProperty": [Function],
              "init": [Function],
              "mergeConfigs": [Function],
              "returnValue": [Function],
              "setProperty": [Function],
            },
            "children": Object {},
            "config": Object {
              "type": "type-checker-function",
            },
            "deep": true,
            "names": Array [
              "list",
              "constructor",
            ],
          },
        },
        "config": Object {
          "type": "type-checker-object",
        },
        "deep": true,
        "names": Array [
          "list",
        ],
      },
      "@method": Object {
        "checker": Object {
          "arguments": [Function],
          "getProperty": [Function],
          "init": [Function],
          "mergeConfigs": [Function],
          "returnValue": [Function],
          "setProperty": [Function],
        },
        "children": Object {
          "@constructor": Object {
            "checker": Object {
              "arguments": [Function],
              "getProperty": [Function],
              "init": [Function],
              "mergeConfigs": [Function],
              "returnValue": [Function],
              "setProperty": [Function],
            },
            "children": Object {},
            "config": Object {
              "type": "type-checker-function",
            },
            "deep": true,
            "names": Array [
              "method",
              "constructor",
            ],
          },
        },
        "config": Object {
          "type": "type-checker-function",
        },
        "deep": true,
        "names": Array [
          "method",
        ],
      },
    },
    "config": Object {
      "type": "type-checker-object",
    },
    "deep": true,
    "names": Array [],
  },
}
`;
